added the configuration of dashboard

--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -18,7 +18,9 @@ services:
     hostname: grafana
     image: grafana/grafana:11.5.2
     volumes:
-      - ./grafana/provisioning/provisioning-datasources.yaml:/etc/grafana/provisioning/datasources/provisioning-datasources.yaml:ro
+      - ./grafana/provisioning/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml:ro
+      - ./grafana/provisioning/dashboards.yaml:/etc/grafana/provisioning/dashboards/dashboards.yaml:ro
+      - ./grafana/provisioning/dashboards/my-explore-collection.json:/etc/grafana/provisioning/dashboards/my-explore-collection.json:ro
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
