--- a/container/grafana/provisioning/datasources.yaml
+++ b/container/grafana/provisioning/datasources.yaml
@@ -71,6 +71,18 @@ datasources:
         spanStartTimeShift: '-1s'
       nodeGraph:
         enabled: true
+      tracesToMetrics:
+        datasourceUid: mimir-tenant-metrice
+        queries:
+          - name: p99 latency
+            query: "histogram_quantile(.99, sum(rate(http_server_requests_seconds_bucket{$__tags}[1m])) by (le))"
+        spanStartTimeShift: -10m
+        spanEndTimeShift: 10m
+        tags:
+          - key: service.name
+            value: server_address
+          - key: job
+            value: ""
 
   - name: Pyroscope
     type: grafana-pyroscope-datasource
