--- a/container/grafana/provisioning/datasources.yaml
+++ b/container/grafana/provisioning/datasources.yaml
@@ -50,6 +50,18 @@ datasources:
           matcherType: label
           matcherRegex: trace_id
           url: $${__value.raw}
+        - name: Jaeger
+          matcherType: label
+          matcherRegex: trace_id
+          targetBlank: true
+          url: http://localhost:16686/trace/$${__value.raw}
+          urlDisplayLabel: Jaeger
+        - name: Zipkin
+          matcherType: label
+          matcherRegex: trace_id
+          targetBlank: true
+          url: http://localhost:9411/zipkin/traces/$${__value.raw}
+          urlDisplayLabel: Zipkin
 
   - name: Tempo
     type: tempo
