--- a/container/docker-compose-app.yml
+++ b/container/docker-compose-app.yml
@@ -90,12 +90,12 @@ services:
 # networks
 ##############################
 
-#networks:
-#  internal:
-#    name: intra-net
-#    driver: bridge
-#    internal: true
-#  external:
-#    name: hands-net
-#    driver: bridge
+networks:
+  internal:
+    name: intra-net
+    driver: bridge
+    internal: true
+  external:
+    name: hands-net
+    driver: bridge
 
