--- a/webapp/webui/build.gradle
+++ b/webapp/webui/build.gradle
@@ -25,11 +25,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// libraries necessary for OpenTelemetry
-	implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'
+	// libraries for Metrics in OpenTelemetry (using both OpenTelemetry and Prometheus protocol)
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-otlp'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
+	// library for Logging and Tracing in OpenTelemetry
+	implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'
 
 	// library for examplar
 	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
