--- a/webapp/webapi/src/main/resources/application.yml
+++ b/webapp/webapi/src/main/resources/application.yml
@@ -39,3 +39,21 @@ management:
 #      endpoint: http://otel-collector:4318/v1/logs
 #    tracing:
 #      endpoint: http://otel-collector:4318/v1/traces
+
+# variables for 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter'
+otel:
+  exporter:
+    otlp:
+      endpoint: http://otel-collector:4318
+  service:
+    name: webapi
+  log:
+    level: debug
+
+# variables for 'io.pyroscope:agent'
+pyroscope:
+  application:
+    name: my.java.app.webapi
+  server:
+    address: http://pyroscope:4040
+
