--- a/container/grafana/provisioning/datasources.yaml
+++ b/container/grafana/provisioning/datasources.yaml
@@ -8,8 +8,8 @@ datasources:
     access: proxy
     orgId: 1
     url: http://mimir-lb:9009/prometheus
-    version: 1
     editable: true
+    isDefault: false
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
       alertmanagerUid: "alertmanager"
@@ -18,13 +18,12 @@ datasources:
           datasourceUid: tempo
         - name: trace_id
           url: http://localhost:16686/trace/$${__value.raw}
-          urlDisplayLabel: Jaeger
+          urlDisplayLabel: "Ref.) Jump to an external tool: Jaeger"
         - name: trace_id
           url: http://localhost:9411/zipkin/traces/$${__value.raw}
-          urlDisplayLabel: Zipkin
+          urlDisplayLabel: "Ref.) Jump to an external tool: Zipkin"
     secureJsonData:
       httpHeaderValue1: "tenant-metrics"
-    isDefault: false
 
   - name: "Mimir for Trace"
     type: prometheus
@@ -32,14 +31,13 @@ datasources:
     access: proxy
     orgId: 1
     url: http://mimir-lb:9009/prometheus
-    version: 1
     editable: true
+    isDefault: false
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
       alertmanagerUid: "alertmanager"
     secureJsonData:
       httpHeaderValue1: "tenant-trace"
-    isDefault: false
 
   - name: Loki
     type: loki
@@ -47,8 +45,8 @@ datasources:
     access: proxy
     orgId: 1
     url: http://loki-lb:9009
-    version: 1
     editable: true
+    isDefault: true
     jsonData:
       derivedFields:
         - name: trace_id
@@ -61,13 +59,13 @@ datasources:
           matcherRegex: trace_id
           targetBlank: true
           url: http://localhost:16686/trace/$${__value.raw}
-          urlDisplayLabel: Jaeger
+          urlDisplayLabel: "Ref.) Jump to an external tool: Jaeger"
         - name: Zipkin
           matcherType: label
           matcherRegex: trace_id
           targetBlank: true
           url: http://localhost:9411/zipkin/traces/$${__value.raw}
-          urlDisplayLabel: Zipkin
+          urlDisplayLabel: "Ref.) Jump to an external tool: Zipkin"
 
   - name: Tempo
     type: tempo
@@ -75,11 +73,8 @@ datasources:
     access: proxy
     orgId: 1
     url: http://tempo-lb-3200:9009
-    basicAuth: false
-    isDefault: true
-    version: 1
     editable: true
-    apiVersion: 1
+    isDefault: false
     jsonData:
       httpMethod: GET
       serviceMap:
@@ -109,4 +104,5 @@ datasources:
     orgId: 1
     url: http://pyroscope:4040
     editable: true
+    isDefault: false
 
