improved the way to write in configurations

--- a/container/mimir/config/mimir.yaml
+++ b/container/mimir/config/mimir.yaml
@@ -1,7 +1,5 @@
-# Do not use this configuration in production.
-# It is for demonstration purposes only.
-# Run Mimir in single process mode, with all components running in 1 process.
-target: all,overrides-exporter
+server:
+  log_level: debug
 
 # Configure Mimir to use Minio as object storage backend.
 common:
@@ -20,10 +18,6 @@ blocks_storage:
   tsdb:
     dir: /data/ingester
 
-# Use memberlist, a gossip-based protocol, to enable the 3 Mimir replicas to communicate
-memberlist:
-  join_members: [mimir-1, mimir-2]
-
 ruler:
   rule_path: /data/ruler
   ring:
@@ -34,5 +28,8 @@ ruler:
 limits:
   max_global_exemplars_per_user: 100000
 
-server:
-  log_level: debug
+# Use memberlist, a gossip-based protocol, to enable the 3 Mimir replicas to communicate
+memberlist:
+  join_members:
+    - mimir-1
+    - mimir-2
