--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
-      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
+#      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
       - GF_USERS_DEFAULT_THEME=light
       - GF_SMTP_ENABLED=true
       - GF_SMTP_HOST=maildev:1025
@@ -380,7 +380,7 @@ services:
   maildev:
     container_name: maildev
     hostname: maildev
-    image: maildev/maildev
+    image: maildev/maildev:2.2.1
     ports:
       - "1080:1080"
       - "1025:1025"
