--- a/container/grafana/provisioning/alerting/alert-rules.yaml
+++ b/container/grafana/provisioning/alerting/alert-rules.yaml
@@ -2,10 +2,10 @@ apiVersion: 1
 
 groups:
 
-  - name: "Eval Interval - 1m"
+  - name: "Eval Interval - 10s"
     orgId: 1
     folder: "Hands-on Training"
-    interval: 1m
+    interval: 10s
     rules:
       - uid: error-level-webui-log
         title: "Error level - WebUI log"
