--- a/container/grafana/provisioning/alerting/alert-rules.yaml
+++ b/container/grafana/provisioning/alerting/alert-rules.yaml
@@ -60,4 +60,4 @@ groups:
         labels: {}
         isPaused: false
         notification_settings:
-          receiver: "Hands-on Recieve E-mail"
+          receiver: "Hands-on Receive E-mail"
