improved to send a profiling data to pyroscope

--- a/container/docker-compose-app.yml
+++ b/container/docker-compose-app.yml
@@ -22,8 +22,13 @@ services:
       - /bin/bash
       - -c
       - |
+        wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
         ./gradlew clean
-        ./gradlew bootRun
+        ./gradlew build
+        java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webui-0.0.1-SNAPSHOT.jar
+    environment:
+      PYROSCOPE_APPLICATION_NAME: webapp.webui
+      PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
     tty: true
 
   webapi:
@@ -42,8 +47,13 @@ services:
       - /bin/bash
       - -c
       - |
+        wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
         ./gradlew clean
-        ./gradlew bootRun
+        ./gradlew build
+        java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webapi-0.0.1-SNAPSHOT.jar
+    environment:
+      PYROSCOPE_APPLICATION_NAME: webapp.webapi
+      PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
     tty: true
 
   mysql:
