--- a/webapp/webapi/build.gradle
+++ b/webapp/webapi/build.gradle
@@ -36,8 +36,8 @@ dependencies {
 	// library for Logging and Tracing in OpenTelemetry
 	implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'
 
-	// library for pyroscope
-	implementation 'io.pyroscope:agent:0.18.0'
+//	// library for pyroscope
+//	implementation 'io.pyroscope:agent:0.18.0'
 
 	// libraties necessary to connect to a database
 	implementation 'com.mysql:mysql-connector-j:9.2.0'
