--- a/container/docker-compose-app.yml
+++ b/container/docker-compose-app.yml
@@ -29,6 +29,9 @@ services:
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webui
       PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
+      PYROSCOPE_FORMAT: jfr
+      PYROSCOPE_PROFILER_ALLOC: 512k
+      PYROSCOPE_PROFILER_LOCK: 10ms
     tty: true
 
   webapi:
@@ -54,6 +57,9 @@ services:
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webapi
       PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
+      PYROSCOPE_FORMAT: jfr
+      PYROSCOPE_PROFILER_ALLOC: 512k
+      PYROSCOPE_PROFILER_LOCK: 10ms
     tty: true
 
   mysql:
