--- a/container/docker-compose-app.yml
+++ b/container/docker-compose-app.yml
@@ -28,7 +28,7 @@ services:
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webui-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webui
-      PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
+      PYROSCOPE_SERVER_ADDRESS: http://alloy:9999
       PYROSCOPE_FORMAT: jfr
       PYROSCOPE_PROFILER_ALLOC: 512k
       PYROSCOPE_PROFILER_LOCK: 10ms
@@ -56,7 +56,7 @@ services:
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webapi-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webapi
-      PYROSCOPE_SERVER_ADDRESS: http://pyroscope:4040
+      PYROSCOPE_SERVER_ADDRESS: http://alloy:9999
       PYROSCOPE_FORMAT: jfr
       PYROSCOPE_PROFILER_ALLOC: 512k
       PYROSCOPE_PROFILER_LOCK: 10ms
