--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -230,9 +230,9 @@ services:
     entrypoint:
       - "chown"
       - "10001:10001"
-      - "/var/tempo-1"
+      - "/var/tempo"
     volumes:
-      - ./tempo/data/tempo-1:/var/tempo-1
+      - ./tempo/data/tempo-1:/var/tempo
     networks:
       - internal
 
