--- a/container/docker-compose-app.yml
+++ b/container/docker-compose-app.yml
@@ -9,22 +9,21 @@ services:
   webui:
     container_name: webui
     hostname: webui
-    image: &webappImage eclipse-temurin:21
+    build:
+      context: ../webapp
+      dockerfile: Dockerfile-webui
+    image: webapp/webui:latest
     ports:
       - 8081:8081
     networks:
       - internal
       - external
-    volumes:
-      - ../webapp/webui:/webui
     working_dir: /webui
     command:
       - /bin/bash
       - -c
       - |
         wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
-        ./gradlew clean
-        ./gradlew build -x test
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webui-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webui
@@ -37,22 +36,21 @@ services:
   webapi:
     container_name: webapi
     hostname: webapi
-    image: *webappImage
+    build:
+      context: ../webapp
+      dockerfile: Dockerfile-webapi
+    image: webapp/webapi:latest
     ports:
       - 8082:8082
     networks:
       - internal
       - external
-    volumes:
-      - ../webapp/webapi:/webapi
     working_dir: /webapi
     command:
       - /bin/bash
       - -c
       - |
         wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
-        ./gradlew clean
-        ./gradlew build -x test
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.grafana.webapp.webapi-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp.webapi
