--- a/webapp/Dockerfile-webui
+++ b/webapp/Dockerfile-webui
@@ -9,4 +9,5 @@ WORKDIR /webui
 
 # Execute Gradle commands in order
 RUN ./gradlew clean
-RUN ./gradlew build -x test
+RUN ./gradlew build
+# RUN ./gradlew build -x test
