--- a/webapp/webui/build.gradle
+++ b/webapp/webui/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
 }
 
 group = 'jp.sios'
@@ -45,6 +46,19 @@ dependencies {
 
 }
 
+jacoco {
+	toolVersion = "0.8.13"
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test.finalizedBy jacocoTestReport
+
+jacocoTestReport {
+	reports {
+		xml.required = true
+		html.required = true
+	}
 }
