--- a/webapp/webui/build.gradle
+++ b/webapp/webui/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'jacoco'
+	id 'checkstyle'
+	id 'pmd'
 }
 
 group = 'jp.sios'
@@ -16,6 +18,35 @@ java {
 
 repositories {
 	mavenCentral()
+}
+
+jacoco {
+	toolVersion = "0.8.13"
+}
+
+checkstyle {
+	toolVersion = "10.26.1"
+	configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
+}
+
+pmd {
+	toolVersion = "7.15.0"
+	ruleSets = [
+		'java-basic',
+		'java-braces',
+		'java-clone',
+		'java-codesize',
+		'java-design',
+		'java-empty',
+		'java-finalizers',
+		'java-imports',
+		'java-strictexception',
+		'java-strings',
+		'java-sunsecure',
+		'java-typeresolution',
+		'java-unnecessary',
+		'java-unusedcode',
+	]
 }
 
 dependencies {
@@ -46,15 +77,14 @@ dependencies {
 
 }
 
-jacoco {
-	toolVersion = "0.8.13"
-}
-
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
 test.finalizedBy jacocoTestReport
+test.finalizedBy checkstyleMain
+test.finalizedBy checkstyleTest
+test.finalizedBy pmdMain
 
 jacocoTestReport {
 	reports {
