--- a/container/grafana/provisioning/alerting/alert-rules.yaml
+++ b/container/grafana/provisioning/alerting/alert-rules.yaml
@@ -7,7 +7,7 @@ groups:
     folder: "Hands-on Training"
     interval: 10s
     rules:
-      - uid: error-level-webui-log
+      - uid: error-level-webapp-webui-log
         title: "Error level - WebUI log"
         condition: C
         data:
@@ -19,7 +19,7 @@ groups:
             datasourceUid: loki
             model:
               editorMode: builder
-              expr: sum by (message)(count_over_time({service_name="webui"} | (detected_level = "error" or detected_level = "ERROR") [1m]))
+              expr: sum by (message)(count_over_time({service_name="webapp-webui"} | (detected_level = "error" or detected_level = "ERROR") [1m]))
               instant: true
               intervalMs: 1000
               maxDataPoints: 43200
