--- a/container/otel-collector/otel-collector-config.yaml
+++ b/container/otel-collector/otel-collector-config.yaml
@@ -13,13 +13,13 @@ receivers:
           metrics_path: /actuator/prometheus
           static_configs:
             - targets:
-              - webui:8181
-              - webapi:8182
+              - webapp-webui:8181
+              - webapp-webapi:8182
         - job_name: node-exporter
           static_configs:
             - targets:
-              - webui-node-exporter:9100
-              - webapi-node-exporter:9100
+              - webapp-webui-node-exporter:9100
+              - webapp-webapi-node-exporter:9100
   mysql:
     username: root
     password: password
