--- a/webapp/webui/src/main/resources/application.yml
+++ b/webapp/webui/src/main/resources/application.yml
@@ -24,8 +24,8 @@ management:
         url: http://otel-collector:4318/v1/metrics
         step: 5s
         resourceAttributes:
-          service.name: webui
-          service.instance.id: webui:8181
+          service.name: webapp-webui
+          service.instance.id: webapp-webui:8181
 #    logging:
 #      endpoint: http://otel-collector:4318/v1/logs
 #    tracing:
@@ -37,12 +37,13 @@ otel:
     otlp:
       endpoint: http://otel-collector:4318
   service:
-    name: webui
+    name: webapp-webui
   log:
     level: debug
 
-# variables for hands-on training
+# variables for hands-on training(if you develop and test the webapi, rewrite 'localhost:8182' to the host section.)
 handson:
-  webapi:
-    host: webapi:8182
-#    host: localhost:8182
+  webapp:
+    webapi:
+      host: webapp-webapi:8182
+#      host: localhost:8182
