--- a/webapp/webapi/build.gradle
+++ b/webapp/webapi/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'jacoco'
 	id 'checkstyle'
+	id 'pmd'
 }
 
 group = 'jp.sios'
@@ -59,6 +60,20 @@ checkstyle {
 	]
 }
 
+pmd {
+	toolVersion = "7.12.0"
+	ruleSetFiles = files("${rootProject.projectDir}/config/pmd/pmd-ruleset.xml")
+	ignoreFailures = true
+	sourceSets = [sourceSets.main, sourceSets.test]
+}
+
+tasks.withType(Pmd) {
+	reports {
+		xml.required = true
+		html.required = true
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
@@ -73,3 +88,5 @@ jacocoTestReport {
 test.finalizedBy jacocoTestReport
 test.finalizedBy checkstyleMain
 test.finalizedBy checkstyleTest
+test.finalizedBy pmdMain
+test.finalizedBy pmdTest
