--- a/container/docker-compose-webapp.yml
+++ b/container/docker-compose-webapp.yml
@@ -70,8 +70,8 @@ services:
       - internal
       - external
     volumes:
-      - ./mysql/config/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./mysql/init:/docker-entrypoint-initdb.d
+      - ../webapp/mysql/config/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+      - ../webapp/mysql/init:/docker-entrypoint-initdb.d:ro
     command: mysqld
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASS}
