updated the reffered webapp version

--- a/container/docker-compose-webapp.yml
+++ b/container/docker-compose-webapp.yml
@@ -27,10 +27,10 @@ services:
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.rollingdice.webapp.webui-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp-webui
-      PYROSCOPE_SERVER_ADDRESS: http://alloy:9999
-      PYROSCOPE_FORMAT: jfr
-      PYROSCOPE_PROFILER_ALLOC: 512k
-      PYROSCOPE_PROFILER_LOCK: 10ms
+      PYROSCOPE_SERVER_ADDRESS: ${PYROSCOPE_SERVER_ADDRESS}
+      PYROSCOPE_FORMAT: ${PYROSCOPE_FORMAT}
+      PYROSCOPE_PROFILER_ALLOC: ${PYROSCOPE_PROFILER_ALLOC}
+      PYROSCOPE_PROFILER_LOCK: ${PYROSCOPE_PROFILER_LOCK}
     tty: true
 
   webapp-webapi:
@@ -54,10 +54,10 @@ services:
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.rollingdice.webapp.webapi-0.0.1-SNAPSHOT.jar
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp-webapi
-      PYROSCOPE_SERVER_ADDRESS: http://alloy:9999
-      PYROSCOPE_FORMAT: jfr
-      PYROSCOPE_PROFILER_ALLOC: 512k
-      PYROSCOPE_PROFILER_LOCK: 10ms
+      PYROSCOPE_SERVER_ADDRESS: ${PYROSCOPE_SERVER_ADDRESS}
+      PYROSCOPE_FORMAT: ${PYROSCOPE_FORMAT}
+      PYROSCOPE_PROFILER_ALLOC: ${PYROSCOPE_PROFILER_ALLOC}
+      PYROSCOPE_PROFILER_LOCK: ${PYROSCOPE_PROFILER_LOCK}
     tty: true
 
   webapp-mysql:
@@ -74,10 +74,10 @@ services:
       - ../webapp/mysql/init:/docker-entrypoint-initdb.d:ro
     command: mysqld
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASS}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASS}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       TZ: "Asia/Tokyo"
 #    logging:
 #      driver: loki
