--- a/container/.env
+++ b/container/.env
@@ -1,6 +1,12 @@
-DB_ROOT_PASS=password
-DB_NAME=mytest
-DB_USER=myuser
-DB_PASS=mypass
 
-MINIO_PASS=password
+PYROSCOPE_SERVER_ADDRESS=http://alloy:9999
+PYROSCOPE_FORMAT=jfr
+PYROSCOPE_PROFILER_ALLOC=512k
+PYROSCOPE_PROFILER_LOCK=10ms
+
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=mytest
+MYSQL_USER=myuser
+MYSQL_PASSWORD=mypass
+
+MINIO_ROOT_PASSWORD=password
