--- a/container/docker-compose-webapp.yml
+++ b/container/docker-compose-webapp.yml
@@ -25,12 +25,10 @@ services:
       - |
         wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.rollingdice.webapp.webui-0.0.1-SNAPSHOT.jar
+    env_file:
+      - ../webapp/.env-webapp
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp-webui
-      PYROSCOPE_SERVER_ADDRESS: ${PYROSCOPE_SERVER_ADDRESS}
-      PYROSCOPE_FORMAT: ${PYROSCOPE_FORMAT}
-      PYROSCOPE_PROFILER_ALLOC: ${PYROSCOPE_PROFILER_ALLOC}
-      PYROSCOPE_PROFILER_LOCK: ${PYROSCOPE_PROFILER_LOCK}
     tty: true
 
   webapp-webapi:
@@ -52,12 +50,10 @@ services:
       - |
         wget -O ./pyroscope.jar https://github.com/grafana/pyroscope-java/releases/download/v2.0.0/pyroscope.jar
         java -javaagent:pyroscope.jar -jar build/libs/apisl.handson.rollingdice.webapp.webapi-0.0.1-SNAPSHOT.jar
+    env_file:
+      - ../webapp/.env-webapp
     environment:
       PYROSCOPE_APPLICATION_NAME: webapp-webapi
-      PYROSCOPE_SERVER_ADDRESS: ${PYROSCOPE_SERVER_ADDRESS}
-      PYROSCOPE_FORMAT: ${PYROSCOPE_FORMAT}
-      PYROSCOPE_PROFILER_ALLOC: ${PYROSCOPE_PROFILER_ALLOC}
-      PYROSCOPE_PROFILER_LOCK: ${PYROSCOPE_PROFILER_LOCK}
     tty: true
 
   webapp-mysql:
@@ -73,12 +69,8 @@ services:
       - ../webapp/mysql/config/my.cnf:/etc/mysql/conf.d/my.cnf:ro
       - ../webapp/mysql/init:/docker-entrypoint-initdb.d:ro
     command: mysqld
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      TZ: "Asia/Tokyo"
+    env_file:
+      - ../webapp/.env-webapp-mysql
 #    logging:
 #      driver: loki
 #      options:
